feat: add options to fetch API and list API identifiers (#73)
* Unify CLI responses

* Fix linter issues

* Fix error description

* Account for failed HTTP requests

* Add unit tests

* Add json flag to print JSON CLI response, otherwise human-readable message

* Fix error response message and add json flag to README

* Fix misspelling

* move readme info to top to enable rebase for fetch PR

* Remove obsolete arg in test case

* refactor: move commands to separate files

* fix linter issue

* revert Makefile change

* revert Makefile change #2 (space)

* adjust to refactoring changes from PR #74

* add README example

* fix README

* generate new client due to new path for fetch grpc endpoints

* add fetch logic

* add fetch command

* add fetch cmd

* add fetch option and unit tests

* fix linter issue

* Revert "fix linter issue"

This reverts commit de10ee6706bd7cbf8d06fc23d54c53a72bdcb5e2.

* Add fetch example to README

* fix fetch response and change README wording

* Rebase and adjust to PR for unified CLI responses

* Fix unit tests

* add unit tests for fetch and list responses

* adjust readme formulation

---------
